syntax = "proto3";

package template;
option go_package = ".;proto";


service NotSunnyActivities{

  rpc GetAllWeatherActivities(NotSunnyActivitiesParams) returns (ActivityResponse) {};
}

message NotSunnyActivitiesParams {}

message ActivityResponse {
  string allweatheractivity = 1;
}